# identity

./: .gitignore  LICENSE.md  LICENSE_ja.md  README.md  README_ja.md  pyproject.toml
docs/manual/en/: README.md  cli-reference.md  config-format.md  quick-start.md  shell-integration.md
docs/manual/ja/: README.md  cli-reference.md  config-format.md  quick-start.md  shell-integration.md
examples/: config.advanced.yml  config.minimal.yml  config.yml
gospelo_identity/: __init__.py  _external.py  checker.py  cli.py  commit_hook.py  config.py  detector.py  guard.py  initializer.py  lister.py  matcher.py  prompter.py  switcher.py
skills/: README.md
skills/claude/: README.md  skill.md
skills/copilot/: README.md  skill.md
tests/: conftest.py  test_checker.py  test_cli.py  test_commit_hook.py  test_config.py  test_detector.py  test_external.py  test_guard.py  test_initializer.py  test_lister.py  test_matcher.py  test_prompter.py  test_switcher.py
