[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gospelo-identity"
version = "0.1.0"
description = "Directory-aware git/gh CLI identity guard: prevent account mix-ups across personal and work GitHub profiles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "gospelo" },
]
keywords = [
    "git",
    "github",
    "gh-cli",
    "identity",
    "profile",
    "multi-account",
    "developer-tools",
]
dependencies = [
    "PyYAML>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gospelo-identity = "gospelo_identity.cli:main"

[project.urls]
Repository = "https://github.com/gospelo-dev/identity"

[tool.hatch.build.targets.sdist]
include = [
    "gospelo_identity/",
    "LICENSE.md",
    "LICENSE_ja.md",
    "README.md",
    "README_ja.md",
]

[tool.hatch.build.targets.wheel]
packages = ["gospelo_identity"]

[tool.hatch.build.targets.wheel.force-include]
"gospelo_identity/templates/config.template.yml" = "gospelo_identity/templates/config.template.yml"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
